--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Database properties  
-spring.datasource.url=jdbc:mysql://localhost:3306/user_service spring.datasource.username=root  
+spring.datasource.url=jdbc:mysql://localhost:3306/user_service 
+spring.datasource.username=root  
 spring.datasource.password=abhishek  
   
 # Driver class name  
